# hypereye

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
heye/lib/arch/: asm.hpp  cpuid.hpp  memory.hpp  mtrr.cpp
heye/lib/asm/: registers.asm
heye/lib/hv/: ept.cpp  ept.hpp  hypervisor.cpp  hypervisor.hpp  vcpu.cpp  vcpu.hpp  vmcall.cpp  vmcall.hpp  vmcs.hpp  vmexit.cpp  vmx.hpp
heye/lib/shared/: cpu.cpp  globals.cpp  trace.cpp  trace.hpp
heye/src/: control.cpp  control.hpp  main.cpp  shared.hpp
src/: config.hpp  main.cpp
src/arch/: arch.hpp  asm.hpp  cr.hpp  memory.cpp  mtrr.hpp  paging.hpp  segments.hpp
src/asm/: vmx.asm
src/crt/: atexit.cpp  atexit.hpp  entry.cpp
src/heye/: config.hpp
src/heye/arch/: arch.hpp  asm.hpp  cpuid.hpp  cr.hpp  dr.hpp  exceptions.hpp  memory.cpp  memory.hpp  msr.hpp  mtrr.cpp  mtrr.hpp  paging.hpp  segments.hpp  vmx.cpp  vmx.hpp
src/heye/asm/: vmm.asm  vmx.asm
src/heye/hv/: callbacks.hpp  ept.cpp  ept.hpp  hypervisor.cpp  hypervisor.hpp  vcpu.cpp  vcpu.hpp  vmcall.cpp  vmcall.hpp  vmcs.hpp  vmexit.cpp  vmexit.hpp  vmx.cpp  vmx.hpp
src/heye/shared/: cpu.cpp  cpu.hpp  globals.cpp  globals.hpp  trace.cpp  trace.hpp
src/heye/shared/std/: callable.hpp  new.cpp  new.hpp  traits.hpp
src/heye/vmi/: process.hpp  vmi.hpp
src/hv/: hypervisor.cpp  hypervisor.hpp  vcpu.cpp  vcpu.hpp  vmcall.cpp  vmcall.hpp  vmcs.cpp  vmcs.hpp  vmexit.cpp  vmexit.hpp  vmx.hpp
src/shared/: asserts.hpp  cpu.cpp  nt.hpp  trace.cpp
src/shared/std/: mutex.hpp  new.cpp  unique.hpp  utility.hpp
